# computer_science_degree_projects

./: README.md
.devcontainer/: pytest.json
.devcontainer/2015_programming_with_data/: devcontainer.json
.devcontainer/2040_mysql_database/: devcontainer.json
.devcontainer/2040_node_app/: devcontainer.json
2015_programming_with_data/: Dockerfile  requirements.txt  test.ipynb
2040_data_newtworks_/: .dockerignore  Dockerfile  app.js  docker-compose.yml  package.json
2040_data_newtworks_/01_welcome/: myFirstNode.js
2040_data_newtworks_/02_simple_server/: index.js  package.json
2040_data_newtworks_/03_modules/: date.js  index.js  package.json  temperature.js
2040_data_newtworks_/04_express/: index.js  package-lock.json  package.json
ADS_midterm/: midterm_project.js  stack.js
AudioProj/AudioProj/: AudioProj.jucer
AudioProj/OtoDecks_start_topic_7/: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  OtoDecks.jucer  README.md  cmake_install.cmake
AudioProj/OtoDecks_start_topic_7/JUCE/: JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
AudioProj/OtoDecks_start_topic_7/JUCE/modules/: Makefile  cmake_install.cmake
AudioProj/OtoDecks_start_topic_7/JUCE/tools/: CMakeCache.txt  JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
AudioProj/OtoDecks_start_topic_7/JUCE/tools/modules/: Makefile  cmake_install.cmake
AudioProj/OtoDecks_start_topic_7/JuceLibraryCode/: JuceHeader.h
AudioProj/OtoDecks_start_topic_7/OtoDecks_artefacts/JuceLibraryCode/: Info.txt
AudioProj/OtoDecks_start_topic_7/OtoDecks_artefacts/JuceLibraryCode/OtoDecks/: Info.plist
AudioProj/OtoDecks_start_topic_7/OtoDecks_artefacts/OtoDecks.app/Contents/: Info.plist
AudioProj/OtoDecks_start_topic_7/Source/: MainComponent.cpp
Audio_proj_2/: Audio_proj_2.jucer
Audio_proj_2/JuceLibraryCode/: JuceHeader.h
Audio_proj_2/Source/: Main.cpp
DataVisualization/: index.html  sketch.js  students.csv
MerkelsimCurrencyExchange /: CSVReader.cpp  CSVReader.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.cpp  OrderBookEntry.h  a.out  main.cpp  test.cpp
TheNightMonster/: README.md  index.html  sketch.js  test.py
TheNightMonster/factory/: Canyon.js  Character.js  Cloud.js  Collectable.js  Confetti.js  Enemy.js  Flagpole.js  Mountain.js  Platform.js  Rock.js  Star.js  Tree.js
TheNightMonster/levels/: LevelOne.js  LevelTwo.js  backgrounSetUp.js
draw-app-CaseStudy/: Readme.md  colourPalette.js  elipseTool.js  freehandTool.js  helperFunctions.js  imageTool.js  index.html  mirrorDrawTool.js  rectangleTool.js  shapeTool.js  sketch.js  style.css  textTool.js
draw-app-CaseStudy/javaScript/: colourPalette.js  helperFunctions.js  imageTool.js  lineToTool.js  mirrorDrawTool.js  scissorTool.js  shapeTool.js  sketch.js  (+3 more)
merklerexAndWeather/: CSVReader.cpp  Candlestick.cpp  Candlestick.h  CandlestickBook.cpp  CandlestickBook.h  MerkelMain.cpp  MerkelMain.h  SupportCode.cpp  SupportCode.h  WeatherBook.cpp  WeatherBook.h  WeatherCSVReader.cpp  WeatherCSVReader.h  WeatherEntry.cpp  WeatherEntry.h  a.out  main.cpp
portifolioPage/: ReadMe.md  index.html  report.html
(+143 files in other folders)
